--- a/assets/style.css
+++ b/assets/style.css
@@ -211,7 +211,7 @@ body.dark .contact a:hover {
 
   transition: background-color 0.2s ease, color 0.2s ease;
 }
-body.dark-mode .site-footer {
+body.dark .site-footer {
   background-color: #181818;
   color: #ccc;
   border-top: 1px solid #2a2a2a;
@@ -451,7 +451,7 @@ body.dark .site-footer {
   }
 }
 /* Dark mode resume image fix */
-body.dark-mode .resume-img {
+body.dark .resume-img {
   background-color: #ffffff;
   padding: 10px;
   border-radius: 6px;
@@ -557,17 +557,17 @@ body.dark-mode .resume-img {
 
 /* ===== Dark Mode ===== */
 
-body.dark-mode .projects-intro {
+body.dark .projects-intro {
   color: #ccc;
 }
 
-body.dark-mode .project-card {
+body.dark .project-card {
   background-color: #1e1e1e;
   box-shadow: 0 6px 16px rgba(0,0,0,0.6);
 }
 
-body.dark-mode .project-tools,
-body.dark-mode .project-links a {
+body.dark .project-tools,
+body.dark .project-links a {
   color: #4da3ff;
 }
 
@@ -592,7 +592,7 @@ body.dark-mode .project-links a {
 }
 
 /* ===== Footer (Dark Mode) ===== */
-body.dark-mode .site-footer {
+body.dark .site-footer {
   background-color: #181818;
   color: #cccccc;
   border-top: 1px solid #2a2a2a;
